[package]
name = "thhp"
version = "0.1.0"
authors = ["kei10in <kei10in@gmail.com>"]

[dependencies.arrayvec]
version = "0.4"
optional = true

[dev-dependencies]
httparse = "1.2"

[dev-dependencies.picohttpparser-sys]
version = "1.0"
default-features = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[features]
nightly = [ "picohttpparser-sys/sse4" ]
