[package]
name = "thhp"
version = "0.2.0"
authors = ["kei10in <kei10in@gmail.com>"]
license = "MIT"
description = "Very Fast HTTP Parser"
repository = "https://github.com/kei10in/thhp"
readme = "README.md"
keywords = ["http", "parser", "no_std"]
categories = ["network-programming", "no-std", "parser-implementations", "web-programming"]
build = "build.rs"

[dependencies.arrayvec]
version = "0.4"
optional = true

[build-dependencies]
version_check = "0.1"

[dev-dependencies]
httparse = "1.3"

[dev-dependencies.picohttpparser-sys]
version = "1.0"
default-features = false
features = ["sse4"]

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = [ "std" ]
std = []
thhp_simd = []
